@@ -1,3 +1,9 @@
+beryllium (0.9.1) debian;
+
+  * Connect to external d-bus service
+
+ -- Pavel Bludov <pbludov@gmail.com>  Mon, 31 Mar 2014 14:00:00 +0900
+
 beryllium (0.9.0) debian;
 
   * New d-bus methods
